fix minor bug that made cards with too long a name undeletable

--- a/src/components/FamilyMemberCard/FamilyMemberCard.module.css
+++ b/src/components/FamilyMemberCard/FamilyMemberCard.module.css
@@ -11,6 +11,7 @@
 
 .familyMemberCard > .name {
   font-size: 30px;
+  max-height: 30px;
 }
 
 .familyMemberCard > .relation {
